Add products for the livestream

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1610,3 +1610,4 @@ en:
       update_success: Live Stream updated successfully.
       added_success: Live Stream Added successfully.
       list_success: Live Stream listed successfully.
+      product_ids: Select live stream products
