Add pages controller chnages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1619,3 +1619,9 @@ en:
       success:
         sign_up: User created successfully.
         sign_in: User Sign in Successfully.
+    page:
+      error:
+        user_exists: User exists with given email.
+        email_password_unmatch: Email and Password does not match. Please enter valid credentials.
+      success:
+        page_list: Pages listed successfully.
