fetch page api using slug

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1621,7 +1621,7 @@ en:
         sign_in: User Sign in Successfully.
     page:
       error:
-        user_exists: User exists with given email.
-        email_password_unmatch: Email and Password does not match. Please enter valid credentials.
+        page_not_found: Page not found with passed slug.
       success:
         page_list: Pages listed successfully.
+        show: Page fetch successfully.
