Add contact controller changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1144,7 +1144,8 @@ en:
         show: Page fetch successfully.
     contact:
       success:
-          create: Create contact successfully.
+          create: Contact Detail created successfully.
+          update: Contact Detail updated successfully.
     pagination:
       next_page: next page &raquo;
       previous_page: ! '&laquo; previous page'
