Add messages and contact module changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1151,6 +1151,15 @@ en:
           show: Contact Detail fetched successfully.
       error:
           not_found: Contact not found.
+    message:
+      success:
+          create: Message sent successfully.
+          update: Message updated successfully.
+          index: Message listed successfully.
+          delete: Message deleted successfully.
+          show: Message fetched successfully.
+      error:
+          not_found: Message not found.
 
     pagination:
       next_page: next page &raquo;
