Add locales for the thread table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1160,6 +1160,15 @@ en:
           show: Message fetched successfully.
       error:
           not_found: Message not found.
+    thread:
+      success:
+          create: Thread created successfully.
+          update: Thread updated successfully.
+          index: Thread listed successfully.
+          delete: Thread deleted successfully.
+          show: Thread fetched successfully.
+      error:
+          not_found: Thread not found.
 
     pagination:
       next_page: next page &raquo;
