minor changes in menu items in swagger

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1149,6 +1149,15 @@ en:
           show: Menu Location fetched successfully.
       error:
           not_found: Menu Location not found.
+    menu_item:
+      success:
+          create: Menu Item add successfully.
+          update: Menu Item updated successfully.
+          index: Menu Item listed successfully.
+          delete: Menu Item deleted successfully.
+          show: Menu Item fetched successfully.
+      error:
+          not_found: Menu Item not found.
     pagination:
       next_page: next page &raquo;
       previous_page: ! '&laquo; previous page'
